# PreFHEtch

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  dataset.sh  linter.sh  run_test.py
benchmarks/: config.ini  config_sift10k_nq_1_10_nprobe_5_and_10.ini  config_sift10k_nq_1_2_3_4_5_6_7_nprobe_10_coarse_probe_200_300.ini  config_sift10k_nq_1_3_5_7_9_nprobe_10_20_coarse_probe_200_300.ini  config_sift1m_nq_1_3_5_7_9_nprobe.ini  dataset.sh  graph.py  outputcsv.py  run_test.py  setup_bench.sh
examples/: protobuf_migration_example.cpp
include/client/: client.hpp  client_lib.h
include/common/: client_server_utils.h  protobuf_utils.h
include/server/: server.hpp  server_lib.h  server_utils.h
proto/: prefhetch.proto  search.proto
src/client/: client.cpp  client_lib.cpp  client_utils.cpp
src/common/: client_server_utils.cpp  protobuf_utils.cpp
src/server/: server.cpp  server_lib.cpp  server_utils.cpp
src/server/controllers/: Query.cc  Query.h
tests/: CMakeLists.txt  build.sh  centroids.cpp  coarse_search.cpp  full_search.cpp
tests/sealbgv/: CMakeLists.txt  ecfs.cpp
